# omnetpp_projects

./: .gitignore  CMakeLists.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: Multilayer-satellites.sc  inet.sc
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 48.snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
Multilayer-satellites/: .cproject  .gitignore  .oppbuildspec  .project  .qtenvrc  Makefile  Multilayer-satellites  README.md  SatMobility.cc  fallback.cc  makefrag
Multilayer-satellites/channels/: HighToGround.ned  SatToGround.ned  SatToHigh.ned  SatToSat.cc  SatToSat.ned
Multilayer-satellites/crucialFiles/: openstreetmap.earth
Multilayer-satellites/headers/: ChannelController.h  ConstVars.h  GroundNodeMobility.h  Link.h  MultilayerTools.h  OsgEarthScene.h  SatMobility.h  SatToSat.h  const_vars.h  terNetMobility.h
Multilayer-satellites/osgNodes/: GroundNodeMobility.ned  HAPComm.ned  HAPMobility.ned  terNetComm.ned
Multilayer-satellites/src/: ChannelController.cc  GroundNodeMobility.cc  OsgEarthScene.cc  SatMobility.cc  SatToSat.cc
additional_headers/omnetpp/: cnamedobject.h  sim_std_m.h
additional_headers/osg/: BoundingSphere  GLExtensions  Quat
additional_headers/osgEarthFeatures/: vector_tile.pb.h
inet/: .cproject  .nedexclusions  .oppbuildspec  .oppfeaturestate  Version
inet/src/: Makefile
(+831 files in other folders)
